--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
+:root{
+    --yellow: #F5C32C;
+    --orange: #FCA61F;
+    --gray: #788097;
+    --black: #242D49;
+    --purple: rgb(233 210 255);
+    --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
+    --orangeCard: rgba(255, 166, 31, .45);
+    --blueCard: #DDF8FE;
+    --smboxShadow: 80px 51px 60px rgba(0, 0, 0, 0.08);
+}
+
+
 .App {
-  text-align: center;
+    padding: .5rem 3.5rem;
+    overflow: hidden;
+    color: #000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button{
+    border-radius: 34px;
+    border: none;
+    color: white;
+    font-size: 16px;
+    padding: 11px 26px 11px 26px;
+    background: linear-gradient(180deg , #fdc50f 26.71% #fb982f 99.36%);
+    box-shadow: 0px 20px 24px 3px rgba(255, 161, 40, .45);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
