--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -11,6 +11,16 @@
     gap: 1.5rem;
 }
 
+.navlogo{
+    padding: 50px;
+    width: 60px;
+    height: 60px;
+}
+
+.navlogo:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  }
+
 
 navright{
     display: flex;
