--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,4 +1,4 @@
-.a{
+/* .a{
     height: 100vh;
     display: flex;
     align-items: center;
@@ -47,4 +47,54 @@
 
 .a-right{
     flex: 1;
+} */
+
+.about{
+    height: 80vh;
+}
+
+.max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+
+.about-content .column-left{
+    width: 45%;
+}
+.about-content .column-left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.about-content .column-right{
+    width: 55%;
+}
+.about-content .column-right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about-content .column-right .text span{
+    color: crimson;
+}
+.about-content .column-right p{
+    text-align: justify;
+}
+.about-content .column-right a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.about-content .column-right a:hover{
+    color: crimson;
+    background: none;
 }
